[package]
name = "Pearson"
version = "0.1.0"
edition = "2023.08.26"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.16.0"
polars = { version = "0.32.1", features = ["lazy"]}
clap="2.32.0"
rayon = "1.7.0"


[profile.release]
codegen-units = 16
lto = "fat"
opt-level = 3
panic = "abort"